update security & logout 220422

--- a/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
+++ b/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
@@ -51,12 +51,12 @@
 			</button>
 			<div class="contentz">
 				<div class="rounded">
-					<a asp-controller="Tools" asp-action="Index">
+					<a asp-controller="Security" asp-action="Index">
 						<span class="icon-text">&nbsp;Security</span>
 					</a>
 				</div>
 				<div class="rounded">
-					<a class="red" asp-controller="Login" asp-action="Index">
+					<a class="red" asp-controller="Login" asp-action="Logout">
 						<span class="icon-text">&nbsp;Log Out</span>
 					</a>
 				</div>
