--- a/RFIDP2P3_Web/Views/Master/MasterRFID.cshtml
+++ b/RFIDP2P3_Web/Views/Master/MasterRFID.cshtml
@@ -338,20 +338,31 @@
                     pageSizes: true,
                     buttonCount: 5
                 },
-                columns: [{
-                    width: 50,
-                    command: [{
-                        name: "Update",
-                        text: "<i class='fas fa-edit btnUpdate' title='Update' style='font-size:18px;'></i>"
-                    }]
-                },
+                columns: [
+                @if(Context.Session.GetString("edit_master_rfid") == "1")
                 {
-                    width: 50,
-                    command: [{
-                        name: "Delete",
-                        text: "<i class='fas fa-trash btnDelete red' title='Delete' style='font-size:18px;'></i>"
-                    }]
-                },
+                    <text>
+                    {
+                        width: 50,
+                        command: [{
+                            name: "Update",
+                            text: "<i class='fas fa-edit btnUpdate' title='Update' style='font-size:18px;'></i>"
+                        }]
+                    },
+                    </text>
+                }
+                @if (Context.Session.GetString("del_master_rfid") == "1")
+                {
+                    <text>
+                    {
+                        width: 50,
+                        command: [{
+                            name: "Delete",
+                            text: "<i class='fas fa-trash btnDelete red' title='Delete' style='font-size:18px;'></i>"
+                        }]
+                    },
+                    </text>
+                }
                 {
                     field: "RFID_No",
                     title: "RFID No",
@@ -466,7 +477,7 @@
                                 RFID_No: RFIDNo,
                                 RFID_Type: RFIDType,
                                 Supplier: Supplier,
-                                UserLogin: 'admin'
+                                UserLogin: "@Context.Session.GetString("PIC_ID")"
                             })
                         }).done(function (data, textStatus, jqXHR) {
                             if (data !== 'success') {
@@ -494,12 +505,15 @@
 
 <script type="text/x-kendo-template" id="template_toolbar">
     <div class="toolbar">
-        <button data-toggle="tooltip" title="Create" type="button" class="btn ink-reaction btn-floating-action btn-xs " id="btnCreate">
-            <i class="k-icon k-i-plus"></i> Add New
-        </button>
-        <div class = "spacew"></div>
+        @if(Context.Session.GetString("add_master_rfid") == "1")
+        {
+            <button data-toggle="tooltip" title="Create" type="button" class="btn ink-reaction btn-floating-action btn-xs " id="btnCreate">
+                <i class="k-icon k-i-plus"></i><span>Add New</span>
+            </button>
+            <div class = "spacew"></div>
+        }
 		<button data-toggle="tooltip" title="Save as Excel" type="button" class="btn ink-reaction btn-floating-action btn-xs green" id="btnExcel">
-			<i class="k-icon k-i-excel"></i> Save As Exel
+			<i class="k-icon k-i-excel"></i><span>Save as Excel</span>
 		</button>
     </div>
 </script>
