--- a/RFIDP2P3_Web/Views/Master/MasterUser.cshtml
+++ b/RFIDP2P3_Web/Views/Master/MasterUser.cshtml
@@ -258,7 +258,7 @@
 							dataType: 'text',
 							data: JSON.stringify({
 								PIC_ID: di.PIC_ID,
-								UserLogin: "admin"
+                                UserLogin: "@Context.Session.GetString("PIC_ID")"
 							})
 						}).done(function (data, textStatus, jqXHR) {
 							if (data !== 'success') {
@@ -333,7 +333,7 @@
 								url: 'https://localhost:7072/api/MasterUser/INQ',
 								dataType: 'text',
 								data: JSON.stringify({
-									UserLogin: 'admin'
+									UserLogin: "@Context.Session.GetString("PIC_ID")"
 								})
 							}).done(function (data, textStatus, jqXHR) {
 								try {
@@ -391,20 +391,30 @@
 					buttonCount: 5
 				},
 				columns: [
-				{
-					width: 60,
-					command: [{
-						name: "Update",
-						text: "<i class='fas fa-edit btnUpdate' title='Update' style='font-size:18px;'></i>"
-					}]
-				},
-				{
-					width: 60,
-					command: [{
-						name: "Delete",
-						text: "<i class='fas fa-trash btnDelete red' title='Delete' style='font-size:18px;'></i>"
-					}]
-				},
+                @if(Context.Session.GetString("edit_master_user") == "1")
+                {
+                    <text>
+                    {
+                        width: 50,
+                        command: [{
+                            name: "Update",
+                            text: "<i class='fas fa-edit btnUpdate' title='Update' style='font-size:18px;'></i>"
+                        }]
+                    },
+                    </text>
+                }
+                @if (Context.Session.GetString("del_master_user") == "1")
+                {
+                    <text>
+                    {
+                        width: 50,
+                        command: [{
+                            name: "Delete",
+                            text: "<i class='fas fa-trash btnDelete red' title='Delete' style='font-size:18px;'></i>"
+                        }]
+                    },
+                    </text>
+                }
 				{
 					field: "PIC_ID",
 					title: "ID",
@@ -479,7 +489,7 @@
 								headers: { 'Content-Type': 'application/json', 'XApiKey': 'pgH7QzFHJx4w46fI~5Uzi4RvtTwlEXp' },
 								url: 'https://localhost:7072/api/MasterUserGroup/INQ',
 								dataType: 'text',
-								data: JSON.stringify({ UserGroup_Id: "001" })
+								data: JSON.stringify({ UserGroup_Id: "@Context.Session.GetString("UserGroup_Id")" })
 							}).done(function (data, textStatus, jqXHR) {
 								try {
 									var result = JSON.parse(data);
@@ -563,7 +573,7 @@
 								password: Password,
 								UserGroup_Id: UserGroup,
 								Supplier_Code: Supplier,
-								UserLogin: 'admin'
+                                UserLogin: "@Context.Session.GetString("PIC_ID")"
 							})
 						}).done(function (data, textStatus, jqXHR) {
 							if (data !== 'success') {
@@ -591,12 +601,15 @@
 
 <script type="text/x-kendo-template" id="template_toolbar">
 	<div class="toolbar">
-		<button data-toggle="tooltip" title="Create" type="button" class="btn ink-reaction btn-floating-action btn-xs " id="btnCreate">
-			<i class="k-icon k-i-plus"></i> Add New
-		</button>
-		<div class = "spacew"></div>
+        @if(Context.Session.GetString("add_master_user") == "1")
+        {
+            <button data-toggle="tooltip" title="Create" type="button" class="btn ink-reaction btn-floating-action btn-xs " id="btnCreate">
+                <i class="k-icon k-i-plus"></i><span>Add New</span>
+            </button>
+            <div class = "spacew"></div>
+        }
 		<button data-toggle="tooltip" title="Save as Excel" type="button" class="btn ink-reaction btn-floating-action btn-xs green" id="btnExcel">
-			<i class="k-icon k-i-excel"></i> Save As Exel
+			<i class="k-icon k-i-excel"></i><span>Save as Excel</span>
 		</button>
 	</div>
 </script>
