--- a/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
+++ b/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 				<i class="material-icons">
 					<img src="~/img/icon.png" width="25px" height="25px" />
 				</i>
-				<span class="icon-text"><b>@ViewBag.Username</b></span>
+				<span class="icon-text"><b></b></span>
 			</button>
 			<div class="contentz">
 				<div class="rounded">
