--- a/RFIDP2P3_Web/Views/Master/MasterUser.cshtml
+++ b/RFIDP2P3_Web/Views/Master/MasterUser.cshtml
@@ -141,7 +141,7 @@
 										<div class="form-group form-material col-md-6">
 											<label class="col-sm-10 control-label">Name</label>
 											<div class="col-sm-10">
-												<input type="text" class="form-control" id="Name" required />
+												<input type="text" class="form-control" id="Name" />
 											</div>
 										</div>
 									</div>
