--- a/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
+++ b/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
@@ -174,7 +174,7 @@
 		document.getElementById("mySidebar").style.width = "270px";
 		document.getElementById("content").style.marginLeft = "270px";
 	});
-	document.getElementById("mySidebar").addEventListener("mouseouts", function () {
+	document.getElementById("mySidebar").addEventListener("mouseout", function () {
 
 		document.getElementById("mySidebar").style.width = "85px";
 		document.getElementById("content").style.marginLeft = "85px";
