--- a/RFIDP2P3_Web/Views/Home/Index.cshtml
+++ b/RFIDP2P3_Web/Views/Home/Index.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css">
 </head>
+
+<img src="~/img/bgdaihatsu.svg" style="display:block; margin-left:auto; margin-right:auto; margin-top:100px;  width:50%;">
 <!--
 <body>
     <nav class="navbar navbar-expand-xl">
@@ -61,9 +63,7 @@
         margin-right: 50px;
     }
 
-    .flex {
-        display: inline-flex;
-    }
+   
 
     /* Dropdown Content (Hidden by Default) */
     .dropdown-content {
