--- a/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
+++ b/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
@@ -247,6 +247,10 @@
 		background-color: #F0F2F5;
 	}
 
+	 .flex {
+        display: inline-flex;
+    }
+
 	.banner {
 		width: 100%;
 		height: 100px;
