--- a/RFIDP2P3_Web/Views/Home/Index.cshtml
+++ b/RFIDP2P3_Web/Views/Home/Index.cshtml
@@ -3,53 +3,21 @@
 }
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="~/libs/jquery/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+	<link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
+    <script src="~/lib/jquery/jquery-3.6.0.min.js"></script>
+	<link rel="stylesheet" href="~/lib/fontawesome/css/all.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css">
 </head>
 
-<img src="~/img/bgdaihatsu.svg" style="display:block; margin-left:auto; margin-right:auto; margin-top:100px;  width:50%;">
-<!--
-<body>
-    <nav class="navbar navbar-expand-xl">
-        <a class="navbar-brand" href="#">
-            <img src="~/img/Daihatsu-Logo.svg" width="200" height="60">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<img src="~/img/bgdaihatsu.svg" style="display:block; margin-left:auto; margin-right:auto; margin-top:100px; width:50%;">
 
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            </ul>
-            <div class="right flex">
-                <div class="dropdown">
-                    <a><b>ADMINISTRATOR</b> <i class="fas fa-caret-down"></i></a>
-
-
-                    <div class="dropdown-content">
-                        <a href="#"><i class="fas fa-cog"></i> Settings</a>
-                        <a href="#"><i class="fas fa-info-circle"></i> Help</a>
-                        <hr>
-                        <a href="#" class="red"><i class="fas fa-sign-out-alt red"></i> Sign Out</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-</body>
--->
 <style>
     a {
        
     }
 
     i {
-        margin-top: 4px;
-       
+        margin-top: 4px;  
     }
 
     .navbar {
@@ -62,8 +30,6 @@
         right: 0;
         margin-right: 50px;
     }
-
-   
 
     /* Dropdown Content (Hidden by Default) */
     .dropdown-content {
@@ -87,14 +53,12 @@
     /* Links inside the dropdown */
     .dropdown-content i {
         color: black !important;
-
     }
 
     /* Links inside the dropdown */
     .dropdown-content .red {
         color: red !important;
         padding-bottom: 8px;
-
     }
 
     /* Change color of dropdown links on hover */
