--- a/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
+++ b/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
@@ -1,13 +1,8 @@
-﻿@using Microsoft.AspNetCore.Http
-@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
-
-@functions {
+﻿@functions {
 	public string getClass(string ctr, string act)
 	{
 		var ctrName = ViewContext.RouteData.Values["controller"]?.ToString();
 		var actName = ViewContext.RouteData.Values["action"]?.ToString();
-
-
 		if (ctrName == ctr && actName == act) return "active";
 		else return "";
 	}
@@ -15,7 +10,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<title>@ViewData["Title"] - RFID P2P3</title>
 
@@ -25,7 +19,7 @@
 	<script src="~/lib/jquery/jquery-3.6.0.min.js"></script>
 
 	<link rel="stylesheet" href="~/lib/fontawesome/css/all.css" />
-
+	
 	<link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/lib/bootstrap/js/bootstrap.bundle.min.js" />
 
@@ -37,7 +31,7 @@
 
 	<script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
 	<link rel="stylesheet" href="~/lib/sweetalert2/sweetalert2.min.css" />
-
+	
 	<link rel="stylesheet" href="~/css/Material-Icons.css" />
 	<link rel="icon" href="~/img/icon.png" />
 </head>
@@ -53,14 +47,17 @@
 				<i class="material-icons">
 					<img src="~/img/icon.png" width="25px" height="25px" />
 				</i>
-				<div class = "flex flexstart"><div class = "username"><b>@HttpContextAccessor.HttpContext.Session.GetString("PIC_Name")</b></div></div>
+				<div class="flex-inline flexstart"><div class="username"><b>@Context.Session.GetString("PIC_Name")</b></div></div>
 			</button>
 			<div class="contentz-user">
-				<div class="rounded">
-					<a asp-controller="Tools" asp-action="Index">
-						<span class="icon-text">&nbsp;Security</span>
-					</a>
-				</div>
+				@if(Context.Session.GetString("read_password") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Security" asp-action="Index">
+							<span class="icon-text">&nbsp;Security</span>
+						</a>
+					</div>
+				}
 				<div class="rounded">
 					<a class="red" asp-controller="Login" asp-action="Logout">
 						<span class="icon-text">&nbsp;Log Out</span>
@@ -74,92 +71,121 @@
 
 			<div class="rounded-full">
 				<a asp-controller="Home" asp-action="Index" class="@getClass("Home", "Index")">
-					<i class="material-icons">cottage</i>
+					<i class="material-icons" style="margin-left:32px">cottage</i>
 					<span class="icon-text"><b>Home</b></span>
 				</a>
 			</div>
 
-			<button onclick="darkMode()">
+			@*<button onclick="darkMode()">
 				<i class="material-icons">light_mode</i>
 				<span class="icon-text"><b>Theme</b></span>
 			</button>
 
 			<div class="padding">
 				<hr>
-			</div>
+			</div>*@
 
 			<button class="collapsible">
 				<i class="material-icons">ballot</i>
 				<span class="icon-text"><b>Master</b></span>
 			</button>
 			<div class="contentz">
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterUserGroup"
-						class="@getClass("Master", "MasterUserGroup")">
-						<span class="icon-text">&nbsp;Master User Group</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterPrivilege"
-						class="@getClass("Master", "MasterPrivilege")">
-						<span class="icon-text">&nbsp;Master Privilege</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterUser" class="@getClass("Master", "MasterUser")">
-						<span class="icon-text">&nbsp;Master User</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterShop" class="@getClass("Master", "MasterShop")">
-						<span class="icon-text">&nbsp;Master Shop</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterGateGroup"
-						class="@getClass("Master", "MasterGateGroup")">
-						<span class="icon-text">&nbsp;Master Gate Group</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterGate" class="@getClass("Master", "MasterGate")">
-						<span class="icon-text">&nbsp;Master Gate</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterArea" class="@getClass("Master", "MasterArea")">
-						<span class="icon-text">&nbsp;Master Area</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterSupplier"
-						class="@getClass("Master", "MasterSupplier")">
-						<span class="icon-text">&nbsp;Master Supplier</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterBoxType" class="@getClass("Master", "MasterBoxType")">
-						<span class="icon-text">&nbsp;Master Box Type</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterRFID" class="@getClass("Master", "MasterRFID")">
-						<span class="icon-text">&nbsp;Master RFID</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterTransporter"
-						class="@getClass("Master", "MasterTransporter")">
-						<span class="icon-text">&nbsp;Master Transporter</span>
-					</a>
-				</div>
-				<div class="rounded">
-					<a asp-controller="Master" asp-action="MasterNews" class="@getClass("Master", "MasterNews")">
-						<span class="icon-text">&nbsp;Master News</span>
-					</a>
-				</div>
-				<div class="padding"></div>
-				<div class="padding"></div>
+				@if (Context.Session.GetString("read_master_user_group") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterUserGroup" class="@getClass("Master", "MasterUserGroup")">
+							<span class="icon-text">&nbsp;Master User Group</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_user_priv") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterPrivilege" class="@getClass("Master", "MasterPrivilege")">
+							<span class="icon-text">&nbsp;Master Privilege</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_user") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterUser" class="@getClass("Master", "MasterUser")">
+							<span class="icon-text">&nbsp;Master User</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_shop") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterShop" class="@getClass("Master", "MasterShop")">
+							<span class="icon-text">&nbsp;Master Shop</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_gate_group") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterGateGroup" class="@getClass("Master", "MasterGateGroup")">
+							<span class="icon-text">&nbsp;Master Gate Group</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_gate") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterGate" class="@getClass("Master", "MasterGate")">
+							<span class="icon-text">&nbsp;Master Gate</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_area") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterArea" class="@getClass("Master", "MasterArea")">
+							<span class="icon-text">&nbsp;Master Area</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_supplier") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterSupplier" class="@getClass("Master", "MasterSupplier")">
+							<span class="icon-text">&nbsp;Master Supplier</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_box_type") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterBoxType" class="@getClass("Master", "MasterBoxType")">
+							<span class="icon-text">&nbsp;Master Box Type</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_rfid") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterRFID" class="@getClass("Master", "MasterRFID")">
+							<span class="icon-text">&nbsp;Master RFID</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_transporter") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterTransporter" class="@getClass("Master", "MasterTransporter")">
+							<span class="icon-text">&nbsp;Master Transporter</span>
+						</a>
+					</div>
+				}
+				@if (Context.Session.GetString("read_master_news") == "1")
+				{
+					<div class="rounded">
+						<a asp-controller="Master" asp-action="MasterNews" class="@getClass("Master", "MasterNews")">
+							<span class="icon-text">&nbsp;Master News</span>
+						</a>
+					</div>
+				}
 			</div>
 		</div>
 	</div>
@@ -170,12 +196,10 @@
 <script>
 	//sidebar
 	document.getElementById("mySidebar").addEventListener("mouseover", function () {
-
 		document.getElementById("mySidebar").style.width = "270px";
 		document.getElementById("content").style.marginLeft = "270px";
 	});
 	document.getElementById("mySidebar").addEventListener("mouseout", function () {
-
 		document.getElementById("mySidebar").style.width = "85px";
 		document.getElementById("content").style.marginLeft = "85px";
 	});
@@ -185,34 +209,22 @@
 	var i;
 
 	if (window.location.pathname.toString().includes("Master")) {
-
-		var master = document.getElementsByClassName("content");
-
+		var master = document.getElementsByClassName("contentz");
 		for (var i = 0; i < master.length; i += 1) {
 			master[i].style.display = 'block';
 		}
-
 	}
 
 	for (i = 0; i < coll.length; i++) {
 		coll[i].addEventListener("click", function () {
-
 			var content = this.nextElementSibling;
-
-
 			if (content.style.display === "block") {
 				content.style.display = "none";
 			} else {
 				content.style.display = "block";
 			}
-
-
 		});
-
-
 	}
-
-
 
 	const theme = window.localStorage.getItem("theme");
 
@@ -246,8 +258,8 @@
 	body {
 		background-color: #F0F2F5;
 	}
-
-	 .flex {
+	
+	.flex-inline {
         display: inline-flex;
     }
 
@@ -296,7 +308,7 @@
 	}
 
 	.sidebar a {
-		padding: 8px 8px 8px 32px;
+		padding: 8px 8px 8px 0px;
 		text-decoration: none;
 		font-size: 16px;
 		color: #111;
@@ -323,18 +335,17 @@
 	}
 
 	.contentz {
-		padding: 0 55px;
+		padding: 0 87px;
 		display: none;
 		overflow: hidden;
 		transition: 0.5s;
 	}
 
 	.contentz-user {
-		padding: 0 55px;
+		padding: 0 87px;
 		display: none;
 		overflow: hidden;
 	}
-
 
 	footer {
 		position: fixed;
@@ -348,6 +359,7 @@
 	}
 
 	.active {
+		width: 100%;
 		background-color: #e6e6e6;
 		padding-right: 200% !important;
 	}
@@ -479,11 +491,11 @@
 		color: white;
 	}
 
-	.k-grid-toolbar {
+	.k-grid-toolbar{
 		background-color: #fff;
 	}
 
-	hr {
+	hr{
 		filter: opacity(50%);
 	}
 
@@ -495,7 +507,7 @@
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-		width: 100px;
+		width: 120px;
 	}
 
 	@@media screen and (max-height: 1400px) {
