--- a/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
+++ b/RFIDP2P3_Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+	<link rel="stylesheet" href="~/css/Main.css"/>
+
 	<script src="~/lib/jquery/jquery-3.6.0.min.js"></script>
 
 	<link rel="stylesheet" href="~/lib/fontawesome/css/all.css" />
@@ -53,7 +55,7 @@
 				@if(Context.Session.GetString("read_password") == "1")
 				{
 					<div class="rounded">
-						<a asp-controller="Security" asp-action="Index">
+						<a asp-controller="Security" asp-action="Index" class="@getClass("Security", "Index")">
 							<span class="icon-text">&nbsp;Security</span>
 						</a>
 					</div>
@@ -69,124 +71,133 @@
 				<hr>
 			</div>
 
-			<div class="rounded-full">
+			<button>
 				<a asp-controller="Home" asp-action="Index" class="@getClass("Home", "Index")">
-					<i class="material-icons" style="margin-left:32px">cottage</i>
+					<i class="material-icons">cottage</i>
 					<span class="icon-text"><b>Home</b></span>
 				</a>
-			</div>
-
-			@*<button onclick="darkMode()">
-				<i class="material-icons">light_mode</i>
-				<span class="icon-text"><b>Theme</b></span>
 			</button>
 
+			@if (Context.Session.GetString("read_master_user_group") == "1" ||
+					Context.Session.GetString("read_master_user_priv") == "1" ||
+					Context.Session.GetString("read_master_user") == "1" ||
+					Context.Session.GetString("read_master_shop") == "1" ||
+					Context.Session.GetString("read_master_gate_group") == "1" ||
+					Context.Session.GetString("read_master_gate") == "1" ||
+					Context.Session.GetString("read_master_area") == "1" ||
+					Context.Session.GetString("read_master_supplier") == "1" ||
+					Context.Session.GetString("read_master_box_type") == "1" ||
+					Context.Session.GetString("read_master_rfid") == "1" ||
+					Context.Session.GetString("read_master_transporter") == "1" ||
+					Context.Session.GetString("read_master_news") == "1")
+			{
+				<button class="collapsible">
+					<a id="master">
+						<i class="material-icons">ballot</i>
+						<span class="icon-text"><b>Master</b></span>
+					</a>
+				</button>
+				<div class="contentz">
+					@if (Context.Session.GetString("read_master_user_group") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterUserGroup" class="@getClass("Master", "MasterUserGroup")">
+								<span class="icon-text">&nbsp;Master User Group</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_user_priv") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterPrivilege" class="@getClass("Master", "MasterPrivilege")">
+								<span class="icon-text">&nbsp;Master Privilege</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_user") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterUser" class="@getClass("Master", "MasterUser")">
+								<span class="icon-text">&nbsp;Master User</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_shop") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterShop" class="@getClass("Master", "MasterShop")">
+								<span class="icon-text">&nbsp;Master Shop</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_gate_group") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterGateGroup" class="@getClass("Master", "MasterGateGroup")">
+								<span class="icon-text">&nbsp;Master Gate Group</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_gate") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterGate" class="@getClass("Master", "MasterGate")">
+								<span class="icon-text">&nbsp;Master Gate</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_area") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterArea" class="@getClass("Master", "MasterArea")">
+								<span class="icon-text">&nbsp;Master Area</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_supplier") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterSupplier" class="@getClass("Master", "MasterSupplier")">
+								<span class="icon-text">&nbsp;Master Supplier</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_box_type") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterBoxType" class="@getClass("Master", "MasterBoxType")">
+								<span class="icon-text">&nbsp;Master Box Type</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_rfid") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterRFID" class="@getClass("Master", "MasterRFID")">
+								<span class="icon-text">&nbsp;Master RFID</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_transporter") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterTransporter" class="@getClass("Master", "MasterTransporter")">
+								<span class="icon-text">&nbsp;Master Transporter</span>
+							</a>
+						</div>
+					}
+					@if (Context.Session.GetString("read_master_news") == "1")
+					{
+						<div class="rounded">
+							<a asp-controller="Master" asp-action="MasterNews" class="@getClass("Master", "MasterNews")">
+								<span class="icon-text">&nbsp;Master News</span>
+							</a>
+						</div>
+					}
+				</div>
+			}
 			<div class="padding">
-				<hr>
-			</div>*@
-
-			<button class="collapsible">
-				<i class="material-icons">ballot</i>
-				<span class="icon-text"><b>Master</b></span>
-			</button>
-			<div class="contentz">
-				@if (Context.Session.GetString("read_master_user_group") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterUserGroup" class="@getClass("Master", "MasterUserGroup")">
-							<span class="icon-text">&nbsp;Master User Group</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_user_priv") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterPrivilege" class="@getClass("Master", "MasterPrivilege")">
-							<span class="icon-text">&nbsp;Master Privilege</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_user") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterUser" class="@getClass("Master", "MasterUser")">
-							<span class="icon-text">&nbsp;Master User</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_shop") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterShop" class="@getClass("Master", "MasterShop")">
-							<span class="icon-text">&nbsp;Master Shop</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_gate_group") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterGateGroup" class="@getClass("Master", "MasterGateGroup")">
-							<span class="icon-text">&nbsp;Master Gate Group</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_gate") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterGate" class="@getClass("Master", "MasterGate")">
-							<span class="icon-text">&nbsp;Master Gate</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_area") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterArea" class="@getClass("Master", "MasterArea")">
-							<span class="icon-text">&nbsp;Master Area</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_supplier") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterSupplier" class="@getClass("Master", "MasterSupplier")">
-							<span class="icon-text">&nbsp;Master Supplier</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_box_type") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterBoxType" class="@getClass("Master", "MasterBoxType")">
-							<span class="icon-text">&nbsp;Master Box Type</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_rfid") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterRFID" class="@getClass("Master", "MasterRFID")">
-							<span class="icon-text">&nbsp;Master RFID</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_transporter") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterTransporter" class="@getClass("Master", "MasterTransporter")">
-							<span class="icon-text">&nbsp;Master Transporter</span>
-						</a>
-					</div>
-				}
-				@if (Context.Session.GetString("read_master_news") == "1")
-				{
-					<div class="rounded">
-						<a asp-controller="Master" asp-action="MasterNews" class="@getClass("Master", "MasterNews")">
-							<span class="icon-text">&nbsp;Master News</span>
-						</a>
-					</div>
-				}
-			</div>
+			</div>	
 		</div>
 	</div>
 
@@ -194,14 +205,68 @@
 </body>
 
 <script>
+	var openMenu = "no";
+
 	//sidebar
 	document.getElementById("mySidebar").addEventListener("mouseover", function () {
 		document.getElementById("mySidebar").style.width = "270px";
 		document.getElementById("content").style.marginLeft = "270px";
+
+		var iconText = document.getElementsByClassName("icon-text");
+
+		for (var i=0;i<iconText.length;i+=1){
+			iconText[i].style.display = 'inline';
+		}
+
+		var active;
+		
+		if(window.location.pathname.toString().includes("Master")){
+		 active = document.getElementsByClassName("active")[1];
+		 active.style.transform = "translateX(-20px)";
+		 active.style.paddingLeft= "20px";
+		} else{
+			active = document.getElementsByClassName("active")[0];
+			active.style.transform = "translateX(-50px)";
+			active.style.paddingLeft= "42px";
+		}
+
+		active.style.paddingRight = "230px";
+		
+		var contentz = document.getElementsByClassName("contentz");
+		for (var i=0;i<contentz.length;i+=1){
+			if(openMenu == "yes"){
+				contentz[i].style.display = 'block';	
+			} 
+			
+		}
 	});
+
 	document.getElementById("mySidebar").addEventListener("mouseout", function () {
-		document.getElementById("mySidebar").style.width = "85px";
-		document.getElementById("content").style.marginLeft = "85px";
+		document.getElementById("mySidebar").style.width = "90px";
+		document.getElementById("content").style.marginLeft = "90px";
+
+		var iconText = document.getElementsByClassName("icon-text");
+
+		for (var i=0;i<iconText.length;i+=1){
+			iconText[i].style.display = 'none';
+		}
+
+		var active;
+		
+		if(window.location.pathname.toString().includes("Master")){
+		 active = document.getElementsByClassName("active")[1];
+		} else{
+			active = document.getElementsByClassName("active")[0];
+		}
+
+		active.style.paddingRight = "0px";
+		active.style.transform = "translateX(-10px)";
+		active.style.paddingLeft= "0px";
+
+		var contentz = document.getElementsByClassName("contentz");
+		for (var i=0;i<contentz.length;i+=1){
+			contentz[i].style.display = 'none';
+		}
 	});
 
 	//colapse
@@ -209,9 +274,13 @@
 	var i;
 
 	if (window.location.pathname.toString().includes("Master")) {
+		var masterButton = document.getElementById("master");
+		masterButton.classList.add("active");
+
 		var master = document.getElementsByClassName("contentz");
 		for (var i = 0; i < master.length; i += 1) {
-			master[i].style.display = 'block';
+			master[i].style.display = 'none';
+			openMenu = "yes";
 		}
 	}
 
@@ -220,315 +289,12 @@
 			var content = this.nextElementSibling;
 			if (content.style.display === "block") {
 				content.style.display = "none";
+				openMenu = "no";
 			} else {
 				content.style.display = "block";
+				openMenu = "yes";
 			}
 		});
 	}
-
-	const theme = window.localStorage.getItem("theme");
-
-	if (theme === "dark") {
-		var element = document.body;
-		element.classList.toggle("dark-mode");
-
-		var side = document.getElementById("mySidebar");
-		side.classList.toggle("dark-mode-side");
-	}
-
-	function darkMode() {
-		if (theme === "dark") {
-			window.localStorage.setItem("theme", "light");
-			var element = document.body;
-			element.classList.toggle("dark-mode");
-			var side = document.getElementById("mySidebar");
-			side.classList.toggle("dark-mode-side");
-		} else {
-			window.localStorage.setItem("theme", "dark");
-			var element = document.body;
-			element.classList.toggle("dark-mode");
-
-			var side = document.getElementById("mySidebar");
-			side.classList.toggle("dark-mode-side");
-		}
-	}
 </script>
-
-<style>
-	body {
-		background-color: #F0F2F5;
-	}
-	
-	.flex-inline {
-        display: inline-flex;
-    }
-
-	.banner {
-		width: 100%;
-		height: 100px;
-		background-image: url("../../img/bannertwo.jpg");
-		position: absolute;
-		top: 0;
-		background-position: center;
-		/* Center the image */
-		background-repeat: no-repeat;
-		/* Do not repeat the image */
-		background-size: cover;
-		/* Resize the background image to cover the entire container */
-	}
-
-	.sidebar {
-		width: 85px;
-		position: fixed;
-		z-index: 99;
-		top: 80px;
-		bottom: 30px;
-		background-color: #fff;
-		transition: 0.5s;
-		overflow-x: hidden;
-		padding-top: 30px;
-		white-space: nowrap;
-		-moz-box-shadow: -3px 0 7px 0 #555;
-		-webkit-box-shadow: -3px 0 7px 0 #555;
-		box-shadow: -0px 0 7px 0 #555;
-		border-radius: 0px 20px 20px 0px;
-	}
-
-	.sidebar button {
-		padding: 8px 8px 8px 32px;
-		text-decoration: none;
-		font-size: 16px;
-		color: #111;
-		display: block;
-		background-color: #fff;
-		-webkit-box-shadow: none;
-		-moz-box-shadow: none;
-		box-shadow: none;
-		border: none;
-	}
-
-	.sidebar a {
-		padding: 8px 8px 8px 0px;
-		text-decoration: none;
-		font-size: 16px;
-		color: #111;
-		display: block;
-	}
-
-	main .sidebar {
-		position: absolute;
-		top: 0;
-		right: 25px;
-		font-size: 36px;
-		margin-left: 50px;
-	}
-
-	.material-icons,
-	.icon-text {
-		vertical-align: middle;
-	}
-
-	.material-icons {
-		padding-bottom: 3px;
-		margin-right: 30px;
-		color: #111;
-	}
-
-	.contentz {
-		padding: 0 87px;
-		display: none;
-		overflow: hidden;
-		transition: 0.5s;
-	}
-
-	.contentz-user {
-		padding: 0 87px;
-		display: none;
-		overflow: hidden;
-	}
-
-	footer {
-		position: fixed;
-		bottom: 0;
-		left: 0;
-		right: 0;
-	}
-
-	.padding {
-		padding: 8px 16px;
-	}
-
-	.active {
-		width: 100%;
-		background-color: #e6e6e6;
-		padding-right: 200% !important;
-	}
-
-	.rounded:hover {
-		background-color: #e6e6e6;
-		width: fit-content !important;
-		padding-right: 100px;
-	}
-
-	.rounded-full:hover {
-		background-color: #e6e6e6;
-	}
-
-	img {
-		border-radius: 5px;
-	}
-
-	.black {
-		color: black !important;
-	}
-
-	.red {
-		color: red !important;
-	}
-
-	.space {
-		height: 50px;
-	}
-
-	.badge {
-		background-color: #e6e6e6;
-		border-radius: 20%;
-		height: fit-content;
-		padding-right: 10px;
-	}
-
-	span {
-		margin-left: auto;
-		margin-top: 10px;
-	}
-
-	.toggle {
-		margin-left: auto;
-	}
-
-	.arrow {
-		margin-left: auto;
-		padding-right: 10px;
-	}
-
-	.grey {
-		color: #757575 !important;
-	}
-
-	.swal2-popup {
-		font-size: 1rem !important;
-	}
-
-	.block {
-		display: block;
-		margin-left: 5px;
-	}
-
-	.btn-red {
-		background-color: red;
-	}
-
-	#content {
-		padding: 16px;
-		margin-left: 85px;
-		transition: margin-left 0.5s;
-	}
-
-	body::-webkit-scrollbar {
-		width: 0.4em;
-	}
-
-	body::-webkit-scrollbar-track {
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	}
-
-	body::-webkit-scrollbar-thumb {
-		background-color: darkgrey;
-		outline: 1px solid slategrey;
-	}
-
-	.sidebar::-webkit-scrollbar {
-		width: 0.0em;
-	}
-
-	.sidebar::-webkit-scrollbar-track {
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	}
-
-	.sidebar::-webkit-scrollbar-thumb {
-		background-color: darkgrey;
-		outline: 1px solid slategrey;
-	}
-
-	.dark-mode {
-		background-color: #202124;
-		color: white;
-	}
-
-	.dark-mode .grey {
-		color: white !important;
-	}
-
-	.dark-mode-side {
-		background-color: #171717;
-		color: white;
-	}
-
-	.dark-mode a {
-		color: white;
-	}
-
-	.dark-mode i {
-		color: white;
-	}
-
-	.dark-mode a:hover {
-		color: black !important;
-	}
-
-	.dark-mode button {
-		background-color: #171717;
-		color: white;
-	}
-
-	.k-grid-toolbar{
-		background-color: #fff;
-	}
-
-	hr{
-		filter: opacity(50%);
-	}
-
-	h3 {
-		font-size: 20px;
-	}
-
-	.username {
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		width: 120px;
-	}
-
-	@@media screen and (max-height: 1400px) {
-		.banner {
-			height: 55px;
-		}
-	}
-
-	@@media screen and (max-height: 450px) {
-		.sidebar {
-			padding-top: 15px;
-			height: 100%;
-			top: 0;
-			left: 0;
-			bottom: 0;
-		}
-
-		.sidebar a {
-			font-size: 18px;
-		}
-	}
-</style>
-
 </html>
